// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cirq.google.engine.client.quantum_v1alpha1.proto;

import "google/api/resource.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "google.golang.org/genproto/googleapis/cloud/quantum/v1alpha1;quantum";
option java_package = "com.google.cloud.quantum.engine.v1alpha1";

// -

// -
message QuantumProgram {
  // -
  string name = 1;

  // -
  .google.protobuf.Timestamp create_time = 2;

  // -
  .google.protobuf.Timestamp update_time = 3;

  // -
  map<string, string> labels = 4;

  // -
  string label_fingerprint = 5;

  // -
  string description = 6;

  // -
  oneof code_location {
    // -
    GcsLocation gcs_code_location = 7 [deprecated = true];

    // -
    InlineData code_inline_data = 9;
  }

  // -
  .google.protobuf.Any code = 8;
}

// -
message QuantumJob {
  // -
  string name = 1;

  // -
  .google.protobuf.Timestamp create_time = 2;

  // -
  .google.protobuf.Timestamp update_time = 3;

  // -
  map<string, string> labels = 4;

  // -
  string label_fingerprint = 5;

  // -
  string description = 6;

  // -
  SchedulingConfig scheduling_config = 7;

  // -
  OutputConfig output_config = 8 [deprecated = true];

  // -
  ExecutionStatus execution_status = 9;

  // -
  oneof run_context_location {
    // -
    GcsLocation gcs_run_context_location = 10 [deprecated = true];

    // -
    InlineData run_context_inline_data = 12;
  }

  // -
  .google.protobuf.Any run_context = 11;
}

// -
message SchedulingConfig {
  // -
  message ProcessorSelector {
    // -
    repeated string processor_names = 1;
  }

  // -
  string target_route = 1 [deprecated = true];

  // -
  ProcessorSelector processor_selector = 3;

  // -
  int32 priority = 2;
}

// -
message ExecutionStatus {
  // -
  message Failure {
    // -
    enum Code {
      // -
      CODE_UNSPECIFIED = 0;

      // -
      SYSTEM_ERROR = 1;

      // -
      INVALID_PROGRAM = 2;

      // -
      INVALID_RUN_CONTEXT = 3;

      // -
      READ_PROGRAM_NOT_FOUND_IN_GCS = 4 [deprecated = true];

      // -
      READ_PROGRAM_PERMISSION_DENIED = 5 [deprecated = true];

      // -
      READ_PROGRAM_UNKNOWN_ERROR = 6 [deprecated = true];

      // -
      READ_RUN_CONTEXT_NOT_FOUND_IN_GCS = 7 [deprecated = true];

      // -
      READ_RUN_CONTEXT_PERMISSION_DENIED = 8 [deprecated = true];

      // -
      READ_RUN_CONTEXT_UNKNOWN_ERROR = 9 [deprecated = true];

      // -
      WRITE_RESULT_ALREADY_EXISTS_IN_GCS = 10;

      // -
      WRITE_RESULT_GCS_PERMISSION_DENIED = 11;

      // -
      SCHEDULING_EXPIRED = 14;
    }

    // -
    Code error_code = 1;

    // -
    string error_message = 2;
  }

  // -
  enum State {
    // -
    STATE_UNSPECIFIED = 0;

    // -
    READY = 1;

    // -
    RUNNING = 2;

    // -
    CANCELLING = 3;

    // -
    CANCELLED = 4;

    // -
    SUCCESS = 5;

    // -
    FAILURE = 6;
  }

  // -
  State state = 1;

  // -
  string processor_name = 3;

  // -
  string calibration_name = 4;

  // -
  Failure failure = 5;
}

// -
message OutputConfig {
  // -
  oneof output_destination {
    // -
    GcsLocation gcs_results_location = 1;
  }

  // -
  bool overwrite_existing = 2;
}

// -
message GcsLocation {
  // -
  string uri = 1;

  // -
  string type_url = 2;
}

// -
message InlineData {
  // -
  string type_url = 1;
}

// -
message QuantumJobEvent {
  // -
  .google.protobuf.Timestamp event_time = 1;

  // -
  QuantumJob job = 2;

  // -
  .google.protobuf.FieldMask modified_field_mask = 3;
}

// -
message QuantumResult {
  // -
  string parent = 1;

  // -
  .google.protobuf.Any result = 2;
}

// -
message QuantumProcessor {
  option (.google.api.resource) = {
    type: "quantum.googleapis.com/QuantumProcessor"
    pattern: "projects/{project_id}/processors/{processor_id}"
  };

  // -
  enum Health {
    // -
    HEALTH_UNSPECIFIED = 0;

    // -
    OK = 1;

    // -
    DOWN = 2;

    // -
    UNAVAILABLE = 3;
  }

  // -
  string name = 1;

  // -
  Health health = 3;

  // -
  .google.protobuf.Timestamp expected_down_time = 7;

  // -
  .google.protobuf.Timestamp expected_recovery_time = 4;

  // -
  repeated string supported_languages = 5;

  // -
  .google.protobuf.Any device_spec = 6;

  // -
  .google.protobuf.Duration schedule_horizon = 8;

  // -
  .google.protobuf.Duration schedule_frozen_period = 9;
}

// -
message QuantumCalibration {
  // -
  string name = 1;

  // -
  .google.protobuf.Timestamp timestamp = 2;

  // -
  .google.protobuf.Any data = 3;
}

// -
message QuantumReservationGrant {
  // -
  message Budget {
    // -
    string project_id = 1;

    // -
    .google.protobuf.Duration granted_duration = 2;

    // -
    .google.protobuf.Duration available_duration = 3;
  }

  // -
  string name = 1;

  // -
  repeated string processor_names = 2;

  // -
  .google.protobuf.Timestamp effective_time = 3;

  // -
  .google.protobuf.Timestamp expire_time = 4;

  // -
  .google.protobuf.Duration granted_duration = 5;

  // -
  .google.protobuf.Duration available_duration = 6;

  // -
  repeated Budget budgets = 7;
}

// -
message QuantumReservationBudget {
  // -
  string name = 1;

  // -
  repeated string processor_names = 2;

  // -
  .google.protobuf.Timestamp effective_time = 3;

  // -
  .google.protobuf.Timestamp expire_time = 4;

  // -
  .google.protobuf.Duration granted_duration = 5;

  // -
  .google.protobuf.Duration available_duration = 6;
}

// -
message QuantumTimeSlot {
  // -
  message ReservationConfig {
    // -
    string project_id = 1;
  }

  // -
  message MaintenanceConfig {
    // -
    string title = 1;

    // -
    string description = 2;
  }

  // -
  enum TimeSlotType {
    // -
    TIME_SLOT_TYPE_UNSPECIFIED = 0;

    // -
    MAINTENANCE = 1;

    // -
    OPEN_SWIM = 2;

    // -
    RESERVATION = 3;

    // -
    UNALLOCATED = 4;
  }

  // -
  string processor_name = 1;

  // -
  .google.protobuf.Timestamp start_time = 2;

  // -
  .google.protobuf.Timestamp end_time = 3;

  // -
  TimeSlotType slot_type = 5;

  // -
  oneof type_config {
    // -
    ReservationConfig reservation_config = 6;

    // -
    MaintenanceConfig maintenance_config = 7;
  }
}

// -
message QuantumReservation {
  // -
  string name = 1;

  // -
  .google.protobuf.Timestamp start_time = 2;

  // -
  .google.protobuf.Timestamp end_time = 3;

  // -
  .google.protobuf.Timestamp cancelled_time = 4;

  // -
  repeated string whitelisted_users = 5;
}
